<resources>
    <!--App Strings -->
    <string name="main_title">Term Tracker</string>
    <string name="main_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Main Menu Strings-->
    <string name="terms">Terms</string>
    <string name="mentors">Mentors</string>
    <string name="assessments">Assessments</string>
    <string name="courses">Courses</string>

<!--    <string name="wgu_logo">WGU Logo</string>-->
    <!-- Activity Strings -->
    <string name="title_activity_terms">Terms</string>
    <string name="title_activity_courses">Courses</string>
    <string name="title_activity_assessments">Assessments</string>
    <string name="title_activity_mentors">Mentors</string>
    <string name="title_activity_mentors_edit">Edit Mentor</string>

    <!-- -->
    <string name="mentor_name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="title_activity_mentors_add">Add Mentors</string>
    <string name="title_activity_mentors_details">Mentor Details</string>
    <string name="title_activity_assessments_add">Add Assessments</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="assessment_date">Assessment Date</string>
    <string name="assessment_type">Assessment Type</string>
    <string name="assessment_ob">Objective Assessment</string>
    <string name="assessment_pa">Performance Assessment</string>
    <string name="title_activity_assessment_edit">Edit Assessment</string>
    <string name="title_activity_assessments_details">Assessment Details</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="title_activity_courses_add">Add Courses</string>
    <string name="course_name">Course Name</string>
    <string name="start_date">Start Date</string>
    <string name="End_Date">End Date</string>
    <string name="course_status">Course Status</string>
    <string name="course_notes">Course Notes</string>
    <string name="title_activity_courses_edit">Edit Course</string>
    <string name="title_activity_courses_details">Course Details</string>
    <string name="start_date_only">Start Date</string>
    <string name="end_date_only">End Date</string>
    <string name="status_only">Status</string>
    <string name="add_course">Add Course</string>
    <string name="add_mentor">Add Mentor</string>
    <string name="title_activity_terms_add">Add Terms</string>
    <string name="term_name">Term Name</string>
    <string name="title_activity_terms_edit">Edit Term</string>
    <string name="title_activity_terms_details">Term Details</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="sharing">Sharing</string>
    <string name="notifications">Notifications</string>
    <string name="addAssessment">Add Assessment</string>
    <string name="addMentor">Add Mentor</string>
    <string name="name_assessment">No Word</string>
    <string name="name_course">No Word</string>
    <string name="name_mentor">No Word</string>
    <string name="name_term">No Word</string>
    <!-- Assessment Type Strings -->
    <string-array name="type">
        <item>Objective Assessment</item>
        <item>Performance Assessment</item>
    </string-array>
    <!-- Course Status Strings -->
    <string-array name="status">
        <item>In Progress</item>
        <item>Completed</item>
        <item>Plan to Take</item>
        <item>Dropped</item>
    </string-array>



</resources>
