<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.cardview.widget.CardView
        android:id="@+id/mentors_card_view"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653">

        <ImageView
            android:id="@+id/mentors_img"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_margin="15dp"
            android:contentDescription="@string/mentors"
            app:srcCompat="@drawable/ic_baseline_emoji_people_24"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/mentors_button_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mentors"
        android:textAllCaps="true"
        android:textColor="#FF5722"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/mentors_card_view"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/mentors_card_view"
        app:layout_constraintTop_toBottomOf="@+id/mentors_card_view" />

    <androidx.cardview.widget.CardView
        android:id="@+id/courses_card_view"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/mentors_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502">

        <ImageView
            android:id="@+id/courses_img"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_margin="15dp"
            android:contentDescription="@string/courses"
            app:srcCompat="@drawable/ic_baseline_school_24"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/courses_button_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/courses"
        android:textAllCaps="true"
        android:textColor="#FF5722"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mentors_card_view"
        app:layout_constraintEnd_toEndOf="@+id/courses_card_view"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/courses_card_view"
        app:layout_constraintTop_toBottomOf="@+id/courses_card_view"
        app:layout_constraintVertical_bias="0.192" />

    <androidx.cardview.widget.CardView
        android:id="@+id/terms_card_view"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/assessments_card_view"
        app:layout_constraintEnd_toStartOf="@+id/courses_card_view"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502">

        <ImageView
            android:id="@+id/terms_img"
            android:layout_width="130dp"
            android:layout_height="131dp"
            android:layout_margin="15dp"
            android:contentDescription="@string/terms"
            app:srcCompat="@drawable/ic_baseline_date_range_24"
            tools:ignore="ImageContrastCheck" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/assessments_card_view"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mentors_card_view"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653">

        <ImageView
            android:id="@+id/assessments_img"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_margin="15dp"
            android:contentDescription="@string/assessments"
            app:srcCompat="@drawable/ic_baseline_assignment_late_24"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/assessments_button_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/assessments"
        android:textAllCaps="true"
        android:textColor="#FF5722"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/assessments_card_view"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="@+id/assessments_card_view"
        app:layout_constraintTop_toBottomOf="@+id/assessments_card_view" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="62dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mentors_button_title" />

    <TextView
        android:id="@+id/terms_button_title"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/terms"
        android:textAllCaps="true"
        android:textColor="#FF5722"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/assessments_card_view"
        app:layout_constraintEnd_toEndOf="@+id/terms_card_view"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/terms_card_view"
        app:layout_constraintTop_toBottomOf="@+id/terms_card_view"
        app:layout_constraintVertical_bias="0.231" />

</androidx.constraintlayout.widget.ConstraintLayout>
